fix jei support

--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ mixin {
     add sourceSets.main, 'mixins.unidentifiedenchantments.refmap.json'
 }
 
-version = '1.0.3'
+version = '1.0.4'
 group = 'com.ferri.arnus.unidentifiedenchantments' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'unidentifiedenchantments'
 
@@ -138,13 +138,18 @@ repositories {
     maven {
         url = "https://www.cursemaven.com"
     }
+    maven {
+    // location of the maven that hosts JEI files
+    name = "Progwml6 maven"
+    url = "https://dvs1.progwml6.com/files/maven/"
+  }
 }
 
 dependencies {
     // Specify the version of Minecraft to use. If this is any group other than 'net.minecraft', it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency, and its patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.18.1-39.0.66'
+    minecraft 'net.minecraftforge:forge:1.18.2-40.0.0'
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
@@ -161,6 +166,9 @@ dependencies {
     annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
     
     compileOnly fg.deobf("curse.maven:enchantingoverhauled-565463:3656839")
+    compileOnly fg.deobf("mezz.jei:jei-1.18.2:9.5.0.125")
+    
+    runtimeOnly fg.deobf("mezz.jei:jei-1.18.2:9.5.0.125")
     
     //runtimeOnly fg.deobf("curse.maven:apotheosis-313970:3647864")
     //runtimeOnly fg.deobf("curse.maven:enchantmentdescriptions-250419:3615621")
