--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ apply plugin: 'maven-publish'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'org.spongepowered.mixin'
 
+apply from: 'https://raw.githubusercontent.com/SizableShrimp/ForgeUpdatesRemapper/main/remapper.gradle'
+
 mixin {
     // MixinGradle Settings
     config "mixins.unidentifiedenchantments.json"
@@ -25,7 +27,7 @@ mixin {
     add sourceSets.main, 'mixins.unidentifiedenchantments.refmap.json'
 }
 
-version = '1.0.11'
+version = '1.0.12'
 group = 'com.ferri.arnus.unidentifiedenchantments' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'unidentifiedenchantments'
 
@@ -148,7 +150,7 @@ dependencies {
     // Specify the version of Minecraft to use. If this is any group other than 'net.minecraft', it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency, and its patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.19-41.0.29'
+    minecraft 'net.minecraftforge:forge:1.19-41.1.0'
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
@@ -165,9 +167,9 @@ dependencies {
     annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
     
     //compileOnly fg.deobf("curse.maven:enchantingoverhauled-565463:3656839")
-    compileOnly fg.deobf("mezz.jei:jei-1.19-forge:11.0.0.206")
+    compileOnly fg.deobf("mezz.jei:jei-1.19-forge:11.1.1.239")
     
-    runtimeOnly fg.deobf("mezz.jei:jei-1.19-forge:11.0.0.206")
+    runtimeOnly fg.deobf("mezz.jei:jei-1.19-forge:11.1.1.239")
     
     //runtimeOnly fg.deobf("curse.maven:apotheosis-313970:3647864")
     //runtimeOnly fg.deobf("curse.maven:enchantmentdescriptions-250419:3615621")
